# rust_pico_rgbkeyboard

./: Cargo.toml  Embed.toml  build.rs
.cargo/: config.toml
src/: keycodes.rs  main.rs  main_old.rs
