[package]
name = "rust_pico_rgbkeyboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
# embedded-time = "0.12"
fugit = "0.3"

defmt = "0.3"
defmt-rtt = "0.3"
panic-halt = "0.2"

# We're using a Pico by default on this template
rp-pico = "0.5"

# package to read button presses
tca9555 = "0.1"

# packages to write colour data
smart-leds = "0.3"
apa102-spi = "0.3"

# packages to setup keyboard and write keyboard to host
usb-device = "0.2"
usbd-hid = "0.5"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
